# RapidReach

./: .gitignore  README.md  pyproject.toml  requirements.txt
calendar_agent/: __init__.py
common/: __init__.py  config.py  google_auth.py  models.py
deck_generator/: __init__.py  __main__.py  agent.py
gmail_pubsub_listener/: __init__.py  gmail_listener_service.py
lead_finder/: __init__.py  __main__.py  agent.py
lead_finder/tools/: __init__.py  bigquery_utils.py  maps_search.py
lead_manager/: __init__.py  __main__.py  agent.py
lead_manager/tools/: __init__.py  bigquery_utils.py  calendar_utils.py  check_email.py
sdr/: __init__.py  __main__.py  agent.py
sdr/tools/: __init__.py  bigquery_utils.py  email_tool.py  phone_call.py
ui_client/: __init__.py  __main__.py  main.py
ui_client/static/css/: style.css
ui_client/static/js/: app.js
ui_client/templates/: dashboard.html
